# ppl

./: Cargo.toml  README.md
src/: cli.rs  config.rs  display.rs  interactive.rs  main.rs  models.rs  search.rs
src/db/: custom_fields.rs  dates.rs  mod.rs  notes.rs  people.rs  relationships.rs  tags.rs
